Version 1.10.6+dev:
 * Language and i18n:
   * Updated translations: Indonesian, Portuguese, Vietnamese
 * Miscellaneous and bug fixes
   * Improved: Autorevision based revision numbers in CMake.

Version 1.10.6:
 * Campaigns:
   * The Rise of Wesnoth:
     * Fix bug #16772: AI won't attack
   * Son of the Black Eye:
     * Prevent infinite loop if fewer than two transport ships (bug #20389)
 * Language and i18n:
   * Updated translations: British English, Chinese (Simplified),
     Chinese (Traditional), Dutch, Estonian, French, Galician, German,
     Hungarian, Italian, Latin, Portuguese, Portuguese (Brazil),
     Scottish Gaelic, Serbian, Slovak, Vietnamese
 * Multiplayer:
   * Moved new lobby option in Preferences -> Multiplayer to Advanced
     Preferences and clarified description
 * User interface:
   * Scale down unit baseframes larger than 72x72 in the Recruit and Recall
     dialogs to prevent all list entries from being enlarged to fit
 * WML engine:
   * Fixed [disallow_end_turn] losing effect on save/reload (bug #20350)
   * Fixed [disallow_end_turn] persisting when advancing to the next scenario
     (bug #20351)
   * Fixed bug #20401: [remove_unit_overlay] did not work when the image used an
     image path function that took multiple parameters.
 * Miscellaneous and bug fixes:
   * Fixed a rare case where a player could exercise (very) limited control of
     another (human) player's units in a hotseat game.
   * Made wmllint recognize victory_string, defeat_string, gold_carryover_string,
     and notes_string (all from the [objectives] tag) as attributes that need
     to be made translatable
   * Fixed wmllint complaining about id= attributes in [time_area]s
   * Make drakes fly on volcano tiles (bug #20485).
   * Fixed bug #20290: No longer terminate due to a corrupt savegame.
   * Fixed bug #19970: No longer terminate due to corrupt preferences.
   * Fixed a display artifact (halos not cleared) when WML moves a unit.