@@ -1066,6 +1066,9 @@
         name = "Mark McGuire (TronPaul)"
     [/entry]
     [entry]
+        name = "Maxim Biro"
+    [/entry]
+    [entry]
         name = "Maximilian Lupke (malumalu)"
     [/entry]
     [entry]
