@@ -1,6 +1,9 @@
 Version 1.10.6+dev:
  * Language and i18n:
    * Updated translations: Indonesian, Portuguese, Vietnamese
+ * User interface:
+   * Fixed (bug #17220): Cursor in gui2 text box now behaves appropriately after
+     text box overflow occurs.
  * Miscellaneous and bug fixes
    * Improved: Autorevision based revision numbers in CMake.
 
